--- a/package.json
+++ b/package.json
@@ -5,28 +5,34 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "jest"
   },
   "dependencies": {
     "javascript-lp-solver": "^0.4.5",
-    "vue": "^2.6.6",
+    "vue": "^2.6.10",
     "vue-lodash": "^2.0.2",
     "vue-scrollto": "^2.15.0",
-    "vuetify": "^1.5.5"
+    "vuetify": "^1.5.12"
   },
   "devDependencies": {
-    "@mdi/font": "^3.5.95",
-    "@vue/cli-plugin-babel": "^3.5.0",
-    "@vue/cli-plugin-eslint": "^3.5.0",
-    "@vue/cli-service": "^3.5.3",
+    "@mdi/font": "^3.6.95",
+    "@vue/cli-plugin-babel": "^3.6.0",
+    "@vue/cli-plugin-eslint": "^3.6.0",
+    "@vue/cli-service": "^3.6.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
+    "babel-jest": "^24.7.1",
+    "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "jest": "^24.7.1",
+    "jest-serializer-vue": "^2.0.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "vue-cli-plugin-vuetify": "^0.5.0",
-    "vue-template-compiler": "^2.5.21",
-    "vuetify-loader": "^1.0.5"
+    "vue-jest": "^3.0.4",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.2.2"
   },
   "eslintConfig": {
     "root": true,
